fixed exchanges card spacing

--- a/src/App.css
+++ b/src/App.css
@@ -378,3 +378,22 @@ width: 70%;
     padding: 20px;
     align-items: center;
 }
+.exchanges-list{
+    display: flex;
+    width: 80vw;
+
+}
+.exchange-item{
+    padding-left: 35px;
+}
+.exchange-item-1{
+    padding-left: 20px;
+}
+@media screen and (min-width: 1000px){
+    .exchange-item{
+        padding-left: 15px;
+    }
+    .exchange-item-1{
+        padding-left: 5px;
+    }
+}
